--- a/Lab3/Lab3/Lab3.vcxproj
+++ b/Lab3/Lab3/Lab3.vcxproj
@@ -118,6 +118,7 @@
     <ClInclude Include="Polynomial.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Polynomial.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
